--- a/index.html
+++ b/index.html
@@ -156,19 +156,35 @@
       <h2>作品集</h2>
       <nav>
         <ol class="clearfix">
-          <li>所有</li>
-          <li>框架</li>
-          <li>原生JS&amp;CSS</li>
+          <li id="portfolio1">所有</li>
+          <li id="portfolio2">框架</li>
+          <li id="portfolio3">原生JS&amp;CSS</li>
         </ol>
-        <div id="portfolioBar" class="bar ">
-          <div class="bar-inner"></div>
+        <div  class="bar">
+          <div id="BarInner" class="bar-inner state-1"></div>
         </div>
       </nav>
-
-      <div class="jobs">
-        <div class="big"></div>
-        <div class="small"></div>
-        <div class="small"></div>
+      <script>
+        portfolio1.onclick= function(){
+          BarInner.className = 'bar-inner state-1'
+        }
+        portfolio2.onclick= function(){
+          BarInner.className = 'bar-inner state-2'
+        }
+        portfolio3.onclick= function(){
+          BarInner.className = 'bar-inner state-3'
+        }
+      </script>
+      <div class="works">
+        <div class="big" style="top:0; left:0">
+          <img src="./img/1.jpg" alt="">
+        </div>
+        <div class="small" style="top:0; left:645px">
+          <img src="./img/2.jpg" alt="">
+        </div>
+        <div class="small" style="top:312px; left: 645px;">
+          <img src="./img/3.jpg" alt="">
+        </div>
       </div>
 
     </section>
